--- a/index.html
+++ b/index.html
@@ -1,8 +1,103 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=ugc.html">
+<title>UGC AI Generator</title>
+<style>
+body{
+font-family:Arial;
+background:#0f172a;
+color:white;
+padding:20px;
+}
+input,textarea,button{
+width:100%;
+margin:8px 0;
+padding:12px;
+border-radius:6px;
+border:none;
+}
+button{
+background:#22c55e;
+color:black;
+font-size:16px;
+}
+img{
+max-width:100%;
+margin-top:10px;
+border-radius:8px;
+}
+</style>
 </head>
+
 <body>
+
+<h2>UGC AI Generator</h2>
+
+<input id="product" placeholder="Nama Produk">
+
+<textarea id="desc" placeholder="Deskripsi Produk"></textarea>
+
+<input id="style" placeholder="Gaya Video (natural, handheld, indoor)">
+
+<input type="file" id="imageInput" accept="image/*">
+
+<img id="preview"/>
+
+<button onclick="generate()">Generate Prompt</button>
+
+<textarea id="result" rows="6"></textarea>
+
+<script>
+let base64Image="";
+
+document.getElementById("imageInput").addEventListener("change",function(e){
+let file=e.target.files[0];
+let reader=new FileReader();
+reader.onload=function(){
+base64Image=reader.result;
+document.getElementById("preview").src=base64Image;
+}
+reader.readAsDataURL(file);
+});
+
+function generate(){
+let p=product.value;
+let d=desc.value;
+let s=style.value;
+
+let prompt = `
+SCENE 1:
+Close-up product on table.
+Hands enter frame and pick up product.
+Lighting natural, realistic.
+
+SCENE 2:
+Hands rotating product slowly.
+Show texture and details.
+${d}
+
+SCENE 3:
+Hands using product naturally.
+Lifestyle indoor.
+Style: ${s}
+
+SCENE 4:
+Hero shot product center frame.
+Clean background.
+Text overlay: ${p}
+
+VIDEO SETTINGS:
+Vertical 9:16
+Natural handheld
+Indoor lighting
+No face, hands only
+Use uploaded product image as reference
+`;
+
+result.value=prompt;
+}
+</script>
+
 </body>
+
 </html>
