--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 <title>UGC AI Generator</title>
 <style>
 body{
-font-family:Arial;
-background:#0f172a;
-color:white;
-padding:20px;
+ background:#0f172a;
+ color:white;
+ font-family:Arial;
+ padding:20px;
 }
 input,textarea,button{
-width:100%;
-margin:8px 0;
-padding:12px;
-border-radius:6px;
-border:none;
+ width:100%;
+ padding:10px;
+ margin:8px 0;
+ border-radius:6px;
+ border:none;
 }
 button{
-background:#22c55e;
-color:black;
-font-size:16px;
-}
-img{
-max-width:100%;
-margin-top:10px;
-border-radius:8px;
+ background:#22c55e;
+ color:black;
+ font-weight:bold;
 }
 </style>
 </head>
@@ -34,42 +30,22 @@ border-radius:8px;
 <h2>UGC AI Generator</h2>
 
 <input id="product" placeholder="Nama Produk">
-
-<textarea id="desc" placeholder="Deskripsi Produk"></textarea>
-
-<input id="style" placeholder="Gaya Video (natural, handheld, indoor)">
-
-<input type="file" id="imageInput" accept="image/*">
-
-<img id="preview"/>
-
+<input id="desc" placeholder="Deskripsi Produk">
+<input id="style" placeholder="Gaya video (natural, handheld, indoor)">
 <button onclick="generate()">Generate Prompt</button>
 
-<textarea id="result" rows="6"></textarea>
+<textarea id="result" rows="14"></textarea>
 
 <script>
-let base64Image="";
-
-document.getElementById("imageInput").addEventListener("change",function(e){
-let file=e.target.files[0];
-let reader=new FileReader();
-reader.onload=function(){
-base64Image=reader.result;
-document.getElementById("preview").src=base64Image;
-}
-reader.readAsDataURL(file);
-});
-
 function generate(){
-let p=product.value;
-let d=desc.value;
-let s=style.value;
+let p=document.getElementById("product").value;
+let d=document.getElementById("desc").value;
+let s=document.getElementById("style").value;
 
 let prompt = `
 SCENE 1:
 Close-up product on table.
 Hands enter frame and pick up product.
-Lighting natural, realistic.
 
 SCENE 2:
 Hands rotating product slowly.
@@ -78,7 +54,7 @@ ${d}
 
 SCENE 3:
 Hands using product naturally.
-Lifestyle indoor.
+Indoor lifestyle.
 Style: ${s}
 
 SCENE 4:
@@ -90,14 +66,12 @@ VIDEO SETTINGS:
 Vertical 9:16
 Natural handheld
 Indoor lighting
-No face, hands only
-Use uploaded product image as reference
+Hands only, no face
 `;
 
-result.value=prompt;
+document.getElementById("result").value = prompt;
 }
 </script>
 
 </body>
-
 </html>
