--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>UGC AI Generator</title>
+
 <style>
 body{
   background:#0f172a;
@@ -32,34 +33,36 @@ button{
 <input id="product" placeholder="Nama Produk">
 <textarea id="desc" placeholder="Deskripsi Produk"></textarea>
 <input id="style" placeholder="Gaya Video (natural, handheld, indoor)">
-<input type="file" id="imageInput">
 <button onclick="generate()">Generate Prompt</button>
 
-<textarea id="result" rows="10"></textarea>
+<textarea id="result" rows="12"></textarea>
 
 <script>
 function generate(){
-let p=document.getElementById("product").value;
-let d=document.getElementById("desc").value;
-let s=document.getElementById("style").value;
+
+let p = product.value;
+let d = desc.value;
+let s = style.value;
 
 let prompt=`
 SCENE 1:
 Close-up product on table.
 Hands enter frame and pick up product.
-Lighting natural.
+Lighting natural, realistic.
 
 SCENE 2:
 Hands rotating product slowly.
-Show details.
+Show texture and details.
 ${d}
 
 SCENE 3:
 Hands using product naturally.
+Lifestyle indoor.
 Style: ${s}
 
 SCENE 4:
 Hero shot product center frame.
+Clean background.
 Text overlay: ${p}
 
 VIDEO SETTINGS:
@@ -69,7 +72,7 @@ Indoor lighting
 No face, hands only
 `;
 
-document.getElementById("result").value=prompt;
+result.value = prompt;
 }
 </script>
 
