--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ textarea{height:220px;}
 
 </head>
 <body>
-
+<img src="Logo.png" width="120" style="display:block;margin:auto;">
+<h2 style="text-align:center;">Febby AI Studio</h2>
 <h2>UGC AI Generator</h2>
 
 <input id="product" placeholder="Nama Produk">
