--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 
 <!-- ICON APLIKASI -->
-<link rel="icon" href="icon.png?v=5">
-<link rel="apple-touch-icon" href="icon.png?v=5">
+<link rel="icon" href="icon.png?v=9">
+<link rel="apple-touch-icon" href="icon.png?v=9">
 
 <title>Febby AI Studio</title>
 
@@ -14,7 +14,7 @@ body{
   background: linear-gradient(135deg,#6a00ff,#ff4fd8);
   min-height:100vh;
   color:white;
-  font-family:Arial, sans-serif;
+  font-family:Arial,sans-serif;
   padding:20px;
 }
 
@@ -29,56 +29,36 @@ body{
   margin:auto;
 }
 
-h1{
+h1,h2{
   text-align:center;
-  margin-top:10px;
 }
 
-h2{
-  text-align:center;
-  font-weight:normal;
-  margin-bottom:25px;
-}
-
-input, select, textarea, button{
+input,select,textarea,button{
   width:100%;
-  margin-top:10px;
-  padding:12px;
+  margin:8px 0;
+  padding:10px;
   border-radius:8px;
   border:none;
-  font-size:14px;
+}
+
+button{
+  background:#22c55e;
+  font-size:16px;
+  font-weight:bold;
+  color:white;
 }
 
 textarea{
   height:220px;
 }
-
-button{
-  background:#22c55e;
-  color:white;
-  font-size:16px;
-  font-weight:bold;
-  cursor:pointer;
-}
-
-button:hover{
-  background:#16a34a;
-}
-
-.footer{
-  text-align:center;
-  margin-top:20px;
-  opacity:0.8;
-  font-size:12px;
-}
 </style>
 </head>
 
 <body>
-
 <div class="container">
 
-<img src="Logo.png" class="logo">
+<!-- LOGO -->
+<img src="Logo.png?v=9" class="logo">
 
 <h1>Febby AI Studio</h1>
 <h2>UGC AI Generator</h2>
@@ -88,48 +68,38 @@ button:hover{
 <input id="style" placeholder="Gaya Video (natural, handheld, indoor)">
 
 <select id="gender">
-  <option>Wanita</option>
-  <option>Pria</option>
-  <option>Anak</option>
+<option>Wanita</option>
+<option>Pria</option>
+<option>Anak</option>
 </select>
 
 <select id="hijab">
-  <option>Non Hijab</option>
-  <option>Hijab</option>
+<option>Non Hijab</option>
+<option>Hijab</option>
 </select>
 
-<button onclick="generatePrompt()">Generate Prompt</button>
+<button onclick="generate()">Generate Prompt</button>
 
 <textarea id="result" placeholder="Prompt akan muncul di sini..."></textarea>
-
-<div class="footer">
-© 2026 Febby AI Studio
-</div>
 
 </div>
 
 <script>
-function generatePrompt(){
-  let product = document.getElementById("product").value;
-  let desc = document.getElementById("desc").value;
-  let style = document.getElementById("style").value;
-  let gender = document.getElementById("gender").value;
-  let hijab = document.getElementById("hijab").value;
+function generate(){
+let p=document.getElementById("product").value;
+let d=document.getElementById("desc").value;
+let s=document.getElementById("style").value;
+let g=document.getElementById("gender").value;
+let h=document.getElementById("hijab").value;
 
-  let prompt = 
-`Create a vertical UGC video.
-Model: ${gender}, ${hijab}.
-Style: ${style}.
-Scene:
-Model holding ${product}.
-Explain benefits: ${desc}.
-Natural hand movement.
-Soft lighting.
-Indoor setting.
-Talking casually to camera.
-High quality, realistic, 9:16 ratio.`;
+let text=
+"Scene 1: "+g+" "+h+" memegang "+p+", "+s+", indoor, natural light.\n\n"+
+"Scene 2: Close-up produk "+p+", fokus tekstur.\n\n"+
+"Scene 3: "+g+" tersenyum menggunakan "+p+".\n\n"+
+"Deskripsi: "+d+"\n\n"+
+"Format video vertikal 9:16, realistis, handheld.";
 
-  document.getElementById("result").value = prompt;
+document.getElementById("result").value=text;
 }
 </script>
 
