--- a/index.html
+++ b/index.html
@@ -3,24 +3,46 @@
 <head>
 <meta charset="UTF-8">
 
-<!-- ICON APLIKASI -->
-<link rel="icon" href="icon.png?v=9">
-<link rel="apple-touch-icon" href="icon.png?v=9">
+<!-- ICON -->
+<link rel="icon" href="icon.png?v=100">
+<link rel="apple-touch-icon" href="icon.png?v=100">
 
 <title>Febby AI Studio</title>
 
 <style>
+*{
+  box-sizing:border-box;
+  font-family:Arial, sans-serif;
+}
+
+/* ==== DARK ANIMATED BACKGROUND ==== */
 body{
-  background: linear-gradient(135deg,#6a00ff,#ff4fd8);
+  margin:0;
   min-height:100vh;
+  background:linear-gradient(-45deg,#0b0218,#1a0633,#2b0a4a,#3b0f63);
+  background-size:400% 400%;
+  animation:bgmove 12s ease infinite;
   color:white;
-  font-family:Arial,sans-serif;
+}
+
+@keyframes bgmove{
+  0%{background-position:0% 50%;}
+  50%{background-position:100% 50%;}
+  100%{background-position:0% 50%;}
+}
+
+/* ==== LAYOUT ==== */
+.container{
+  max-width:650px;
+  margin:auto;
   padding:20px;
 }
 
-.container{
-  max-width:600px;
-  margin:auto;
+.card{
+  background:rgba(10,0,20,0.75);
+  padding:25px;
+  border-radius:18px;
+  box-shadow:0 0 20px rgba(0,0,0,0.6);
 }
 
 .logo{
@@ -29,43 +51,79 @@ body{
   margin:auto;
 }
 
-h1,h2{
+h1,h3{
   text-align:center;
 }
 
+/* ==== GRID FORM ==== */
+.form-grid{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:10px;
+}
+
+.full{
+  grid-column:1/3;
+}
+
+/* ==== INPUT ==== */
 input,select,textarea,button{
   width:100%;
-  margin:8px 0;
   padding:10px;
   border-radius:8px;
   border:none;
-}
-
-button{
-  background:#22c55e;
-  font-size:16px;
-  font-weight:bold;
-  color:white;
+  font-size:14px;
 }
 
 textarea{
-  height:220px;
+  height:190px;
+}
+
+/* ==== BUTTON ==== */
+button{
+  background:#ff4fd8;
+  color:white;
+  font-size:16px;
+  font-weight:bold;
+  cursor:pointer;
+  box-shadow:0 0 10px #ff4fd8;
+}
+
+button:hover{
+  background:#ff2fcf;
+}
+
+.btn-img{
+  background:#7b2cff;
+  box-shadow:0 0 10px #7b2cff;
+}
+.btn-img:hover{
+  background:#5b16ff;
 }
 </style>
 </head>
 
 <body>
-<div class="container">
 
-<!-- LOGO -->
-<img src="Logo.png?v=9" class="logo">
+<div class="container">
+<div class="card">
+
+<img src="Logo.png" class="logo">
 
 <h1>Febby AI Studio</h1>
-<h2>UGC AI Generator</h2>
+<h3>UGC AI Generator</h3>
 
-<input id="product" placeholder="Nama Produk">
-<input id="desc" placeholder="Deskripsi Produk / Manfaat">
-<input id="style" placeholder="Gaya Video (natural, handheld, indoor)">
+<div class="form-grid">
+
+<!-- LANGUAGE -->
+<select id="lang" class="full">
+<option value="id">Bahasa Indonesia</option>
+<option value="en">English</option>
+</select>
+
+<input id="product" class="full" placeholder="Nama Produk">
+<input id="desc" class="full" placeholder="Deskripsi Produk / Manfaat">
+<input id="style" class="full" placeholder="Gaya Video (natural, handheld, indoor)">
 
 <select id="gender">
 <option>Wanita</option>
@@ -78,28 +136,50 @@ textarea{
 <option>Hijab</option>
 </select>
 
-<button onclick="generate()">Generate Prompt</button>
+<button class="full" onclick="generatePrompt()">Generate Prompt</button>
+<button class="full btn-img" onclick="generateImage()">Generate Image</button>
 
-<textarea id="result" placeholder="Prompt akan muncul di sini..."></textarea>
+<textarea id="result" class="full" placeholder="Prompt akan muncul di sini..."></textarea>
 
 </div>
 
+</div>
+</div>
+
 <script>
-function generate(){
-let p=document.getElementById("product").value;
-let d=document.getElementById("desc").value;
-let s=document.getElementById("style").value;
-let g=document.getElementById("gender").value;
-let h=document.getElementById("hijab").value;
+function generatePrompt(){
 
-let text=
-"Scene 1: "+g+" "+h+" memegang "+p+", "+s+", indoor, natural light.\n\n"+
-"Scene 2: Close-up produk "+p+", fokus tekstur.\n\n"+
-"Scene 3: "+g+" tersenyum menggunakan "+p+".\n\n"+
-"Deskripsi: "+d+"\n\n"+
-"Format video vertikal 9:16, realistis, handheld.";
+let lang=document.getElementById("lang").value;
+let p=product.value;
+let d=desc.value;
+let s=style.value;
+let g=gender.value;
+let h=hijab.value;
 
-document.getElementById("result").value=text;
+if(lang==="id"){
+result.value=
+`Buat video UGC menampilkan ${g} ${h} yang sedang mempromosikan produk ${p}.
+Jelaskan manfaat utama: ${d}.
+Gaya video: ${s}.
+Gerakan natural, ekspresi realistis, pencahayaan alami, kamera handheld, vertikal 9:16, kualitas tinggi.`;
+}else{
+result.value=
+`Create UGC video featuring a ${g} ${h} person promoting ${p}.
+Explain main benefits: ${d}.
+Video style: ${s}.
+Natural movement, realistic expression, natural lighting, handheld camera, vertical 9:16, high quality.`;
+}
+
+}
+
+function generateImage(){
+let prompt=document.getElementById("result").value;
+if(prompt===""){
+alert("Generate prompt terlebih dahulu");
+return;
+}
+let url="https://www.bing.com/images/create?q="+encodeURIComponent(prompt);
+window.open(url,"_blank");
 }
 </script>
 
