--- a/index.html
+++ b/index.html
@@ -2,129 +2,113 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-
-<!-- ICON -->
-<link rel="icon" href="icon.png?v=100">
-<link rel="apple-touch-icon" href="icon.png?v=100">
-
 <title>Febby AI Studio</title>
 
+<link rel="icon" href="icon.png">
+<link rel="apple-touch-icon" href="icon.png">
+
 <style>
-*{
-  box-sizing:border-box;
-  font-family:Arial, sans-serif;
-}
-
-/* ==== DARK ANIMATED BACKGROUND ==== */
 body{
-  margin:0;
-  min-height:100vh;
-  background:linear-gradient(-45deg,#0b0218,#1a0633,#2b0a4a,#3b0f63);
-  background-size:400% 400%;
-  animation:bgmove 12s ease infinite;
-  color:white;
+margin:0;
+font-family:Arial;
+background:linear-gradient(-45deg,#12001f,#2a0040,#3a0060,#12001f);
+background-size:400% 400%;
+animation:bg 12s ease infinite;
+color:white;
+}
+@keyframes bg{
+0%{background-position:0% 50%}
+50%{background-position:100% 50%}
+100%{background-position:0% 50%}
 }
 
-@keyframes bgmove{
-  0%{background-position:0% 50%;}
-  50%{background-position:100% 50%;}
-  100%{background-position:0% 50%;}
+header{
+text-align:center;
+padding:15px;
+font-size:22px;
+font-weight:bold;
 }
 
-/* ==== LAYOUT ==== */
-.container{
-  max-width:650px;
-  margin:auto;
-  padding:20px;
+nav{
+display:flex;
+justify-content:space-around;
+background:#1a0030;
+padding:10px;
 }
+
+nav button{
+background:none;
+border:none;
+color:white;
+font-size:14px;
+}
+nav button.active{color:#ff5fd7;}
+
+section{display:none;padding:15px;}
+section.active{display:block;}
 
 .card{
-  background:rgba(10,0,20,0.75);
-  padding:25px;
-  border-radius:18px;
-  box-shadow:0 0 20px rgba(0,0,0,0.6);
+background:rgba(0,0,0,0.55);
+padding:15px;
+border-radius:12px;
+margin-bottom:10px;
 }
 
-.logo{
-  width:120px;
-  display:block;
-  margin:auto;
-}
-
-h1,h3{
-  text-align:center;
-}
-
-/* ==== GRID FORM ==== */
-.form-grid{
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:10px;
-}
-
-.full{
-  grid-column:1/3;
-}
-
-/* ==== INPUT ==== */
 input,select,textarea,button{
-  width:100%;
-  padding:10px;
-  border-radius:8px;
-  border:none;
-  font-size:14px;
+width:100%;
+padding:10px;
+margin:5px 0;
+border-radius:8px;
+border:none;
 }
 
-textarea{
-  height:190px;
-}
-
-/* ==== BUTTON ==== */
 button{
-  background:#ff4fd8;
-  color:white;
-  font-size:16px;
-  font-weight:bold;
-  cursor:pointer;
-  box-shadow:0 0 10px #ff4fd8;
+background:#ff5fd7;
+color:white;
+font-weight:bold;
 }
 
-button:hover{
-  background:#ff2fcf;
-}
+textarea{height:150px;}
 
-.btn-img{
-  background:#7b2cff;
-  box-shadow:0 0 10px #7b2cff;
+.row{
+display:flex;
+gap:10px;
 }
-.btn-img:hover{
-  background:#5b16ff;
-}
+.row>*{flex:1;}
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<header>Febby AI Studio</header>
+
+<nav>
+<button class="active" onclick="showTab('prompt')">Prompt</button>
+<button onclick="showTab('caption')">Caption</button>
+<button onclick="showTab('hashtag')">Hashtag</button>
+<button onclick="showTab('hook')">Hook</button>
+<button onclick="showTab('cta')">CTA</button>
+<button onclick="showTab('history')">History</button>
+</nav>
+
+<!-- PROMPT -->
+<section id="prompt" class="active">
 <div class="card">
 
-<img src="Logo.png" class="logo">
-
-<h1>Febby AI Studio</h1>
-<h3>UGC AI Generator</h3>
-
-<div class="form-grid">
-
-<!-- LANGUAGE -->
-<select id="lang" class="full">
-<option value="id">Bahasa Indonesia</option>
-<option value="en">English</option>
+<select id="niche">
+<option>Skincare</option>
+<option>Fashion</option>
+<option>Food</option>
+<option>Elektronik</option>
+<option>Baby Care</option>
+<option>Fitness</option>
+<option>Otomotif</option>
 </select>
 
-<input id="product" class="full" placeholder="Nama Produk">
-<input id="desc" class="full" placeholder="Deskripsi Produk / Manfaat">
-<input id="style" class="full" placeholder="Gaya Video (natural, handheld, indoor)">
+<input id="product" placeholder="Nama Produk">
+<input id="benefit" placeholder="Manfaat Produk">
 
+<div class="row">
 <select id="gender">
 <option>Wanita</option>
 <option>Pria</option>
@@ -135,52 +119,189 @@ button:hover{
 <option>Non Hijab</option>
 <option>Hijab</option>
 </select>
-
-<button class="full" onclick="generatePrompt()">Generate Prompt</button>
-<button class="full btn-img" onclick="generateImage()">Generate Image</button>
-
-<textarea id="result" class="full" placeholder="Prompt akan muncul di sini..."></textarea>
-
 </div>
 
+<input id="style" placeholder="Gaya Video (natural, handheld, indoor)">
+
+<select id="location">
+<option>Indoor Rumah</option>
+<option>Kamar Tidur</option>
+<option>Dapur</option>
+<option>Ruang Tamu</option>
+<option>Kamar Mandi</option>
+<option>Outdoor Halaman</option>
+<option>Cafe</option>
+<option>Kantor</option>
+</select>
+
+<h4>Scene + Durasi</h4>
+
+<input id="d1" placeholder="Durasi Scene 1 (5)">
+<input id="s1" placeholder="Scene 1">
+
+<input id="d2" placeholder="Durasi Scene 2">
+<input id="s2" placeholder="Scene 2">
+
+<input id="d3" placeholder="Durasi Scene 3">
+<input id="s3" placeholder="Scene 3">
+
+<input id="d4" placeholder="Durasi Scene 4">
+<input id="s4" placeholder="Scene 4">
+
+<input id="totalDuration" placeholder="Total Durasi" readonly>
+
+<button onclick="generatePrompt()">Generate Prompt</button>
+<button onclick="copyText('result')">Copy</button>
+
+<textarea id="result"></textarea>
+
 </div>
+</section>
+
+<!-- CAPTION -->
+<section id="caption">
+<div class="card">
+<input id="capProduct" placeholder="Nama Produk">
+<input id="capBenefit" placeholder="Manfaat">
+<button onclick="generateCaption()">Generate</button>
+<button onclick="copyText('captionResult')">Copy</button>
+<textarea id="captionResult"></textarea>
 </div>
+</section>
+
+<!-- HASHTAG -->
+<section id="hashtag">
+<div class="card">
+<input id="hashProduct" placeholder="Nama Produk / Niche">
+<button onclick="generateHashtag()">Generate</button>
+<button onclick="copyText('hashtagResult')">Copy</button>
+<textarea id="hashtagResult"></textarea>
+</div>
+</section>
+
+<!-- HOOK -->
+<section id="hook">
+<div class="card">
+<button onclick="randomHook()">Random Hook</button>
+<button onclick="copyText('hookResult')">Copy</button>
+<textarea id="hookResult"></textarea>
+</div>
+</section>
+
+<!-- CTA -->
+<section id="cta">
+<div class="card">
+<button onclick="randomCTA()">Generate CTA</button>
+<button onclick="copyText('ctaResult')">Copy</button>
+<textarea id="ctaResult"></textarea>
+</div>
+</section>
+
+<!-- HISTORY -->
+<section id="history">
+<div class="card" id="historyList"></div>
+</section>
 
 <script>
+function showTab(id){
+document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));
+document.getElementById(id).classList.add("active");
+document.querySelectorAll("nav button").forEach(b=>b.classList.remove("active"));
+event.target.classList.add("active");
+}
+
 function generatePrompt(){
 
-let lang=document.getElementById("lang").value;
-let p=product.value;
-let d=desc.value;
-let s=style.value;
-let g=gender.value;
-let h=hijab.value;
+let t1=parseInt(d1.value)||0;
+let t2=parseInt(d2.value)||0;
+let t3=parseInt(d3.value)||0;
+let t4=parseInt(d4.value)||0;
+let total=t1+t2+t3+t4;
+totalDuration.value=total+"s";
 
-if(lang==="id"){
-result.value=
-`Buat video UGC menampilkan ${g} ${h} yang sedang mempromosikan produk ${p}.
-Jelaskan manfaat utama: ${d}.
-Gaya video: ${s}.
-Gerakan natural, ekspresi realistis, pencahayaan alami, kamera handheld, vertikal 9:16, kualitas tinggi.`;
-}else{
-result.value=
-`Create UGC video featuring a ${g} ${h} person promoting ${p}.
-Explain main benefits: ${d}.
-Video style: ${s}.
-Natural movement, realistic expression, natural lighting, handheld camera, vertical 9:16, high quality.`;
+let txt=
+`Niche: ${niche.value}
+Produk: ${product.value}
+Manfaat: ${benefit.value}
+Model: ${gender.value} ${hijab.value}
+Gaya: ${style.value}
+Lokasi: ${location.value}
+
+Scene:
+1. (${d1.value}s) ${s1.value}
+2. (${d2.value}s) ${s2.value}
+3. (${d3.value}s) ${s3.value}
+4. (${d4.value}s) ${s4.value}
+
+Total Durasi: ${total}s
+Video vertikal 9:16, natural, realistis.`;
+
+result.value=txt;
+saveHistory(txt);
 }
 
+/* CAPTION */
+function generateCaption(){
+captionResult.value=
+`${capProduct.value}
+${capBenefit.value}
+
+Produk viral!
+Yuk checkout sekarang 🔥`;
 }
 
-function generateImage(){
-let prompt=document.getElementById("result").value;
-if(prompt===""){
-alert("Generate prompt terlebih dahulu");
-return;
+/* HASHTAG */
+function generateHashtag(){
+hashtagResult.value=
+`#${hashProduct.value.replace(" ","")}
+#ugc
+#fyp
+#viral
+#tiktokshop
+#kontencreator`;
 }
-let url="https://www.bing.com/images/create?q="+encodeURIComponent(prompt);
-window.open(url,"_blank");
+
+/* HOOK */
+let hooks=["Stop scroll!","Produk ini viral!","Seriusan bagus!","Wajib coba!","Aku baru nemu ini!"];
+function randomHook(){
+hookResult.value=hooks[Math.floor(Math.random()*hooks.length)];
 }
+
+/* CTA */
+let ctas=["Klik keranjang sekarang!","Checkout sekarang!","Jangan sampai kehabisan!","Buruan order!"];
+function randomCTA(){
+ctaResult.value=ctas[Math.floor(Math.random()*ctas.length)];
+}
+
+/* COPY */
+function copyText(id){
+let el=document.getElementById(id);
+el.select();
+document.execCommand("copy");
+alert("Disalin!");
+}
+
+/* HISTORY */
+function saveHistory(text){
+let h=JSON.parse(localStorage.getItem("history")||"[]");
+h.unshift(text);
+localStorage.setItem("history",JSON.stringify(h));
+loadHistory();
+}
+function loadHistory(){
+let h=JSON.parse(localStorage.getItem("history")||"[]");
+let out="";
+h.forEach((x,i)=>{
+out+=`<div><button onclick="useHistory(${i})">Use</button><br>${x}</div><hr>`;
+});
+historyList.innerHTML=out;
+}
+function useHistory(i){
+let h=JSON.parse(localStorage.getItem("history"));
+result.value=h[i];
+showTab("prompt");
+}
+loadHistory();
 </script>
 
 </body>
